só não apaga post ainda mas acabei

--- a/client/main.css
+++ b/client/main.css
@@ -11,6 +11,14 @@ body{
   font-size: 28px;
 }
 
+.link-usuario{
+  color: black;
+}
+
+.link-usuario:hover{
+  color: black;
+}
+
 .typeahead,
 .tt-query,
 .tt-hint {
